login page in progress

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,16 +10,18 @@
   <form>
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input type="text" required id="email" name="useremail"></ion-input>
     </ion-item>
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required></ion-input>
+      <ion-input type="password" required name="userpsw"></ion-input>
     </ion-item>
     <ion-row>
       <ion-col>
         <ion-button type="submit" color="danger" expand="block">Sign In</ion-button>
+        <ion-button (click)="btnClicked()">Click me !</ion-button>
         <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a>
+        <ion-input type="text" id="userid" name="userid">123456890</ion-input>
       </ion-col>
     </ion-row>
   </form>
