BEFORE UPDATE angular cli

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -35,7 +35,7 @@
         alert("only heroes");
       }
     </script>
-    <input type="button" value="Login 123" onclick="onlyheroes();" />
+    <input type="button" value="Login samo tako" onclick="onlyheroes();" />
 
   </form>
 </ion-content>
