--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,11 +10,11 @@
   <form>
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required id="email" name="useremail"></ion-input>
+      <ion-input type="text" required id="email" name="useremail" [(ngModel)]="useremail"></ion-input>
     </ion-item>
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required name="userpsw"></ion-input>
+      <ion-input type="password" required name="userpsw" [(ngModel)]="userpsw"></ion-input>
     </ion-item>
     <ion-row>
       <ion-col>
@@ -25,7 +25,7 @@
         <a [routerLink]="['/forgot-password']" class="small-text"
           >Forgot Password?</a
         >
-        <ion-input type="text" id="userid" name="userid">123456890</ion-input>
+        <ion-input type="text" id="userid" name="userid" [(ngModel)]="userid" >{{userid}}</ion-input>
       </ion-col>
     </ion-row>
 
